Remove obsolete CV files and update example usage in html_to_pdf.py

--- a/cv.html
+++ b/cv.html
@@ -343,7 +343,7 @@
                 <!-- Profile Section -->
                 <div class="space-y-2">
                     <div class="mx-auto overflow-hidden mb-4" style="width:140px;height:140px;border-radius:9999px">
-                        <img alt="Noor Latif" class="w-full h-full object-cover" src="./noor-profile-picture.jpg">
+                        <img alt="Noor Latif" class="w-full h-full object-cover" src="./assets/noor-profile-picture.jpg">
                     </div>
                     <div class="text-center space-y-2" style="border-bottom:2px solid var(--color-border);padding-bottom:1rem;margin-bottom:1rem">
                         <h1>Noor Latif</h1>
