--- a/cv.html
+++ b/cv.html
@@ -206,20 +206,20 @@
         /* ============================================
            Bullet Points
            ============================================ */
-        ol[data-list="bullet"] {
+        ol {
             list-style: none;
             padding-left: 0;
             margin: 0.75rem 0;
         }
 
-        ol[data-list="bullet"] > li {
+        ol > li[data-list="bullet"] {
             position: relative;
             padding-left: 1.25rem;
             margin-bottom: 0.5rem;
             line-height: 1.7;
         }
 
-        ol[data-list="bullet"] > li::before {
+        ol > li[data-list="bullet"]::before {
             content: "•";
             position: absolute;
             left: 0;
